react-java0mysql-main/yaml/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "88"
      port: 88
      targetPort: 8080
  selector:
    io.kompose.service: backend
status:
  loadBalancer: {}
