react-java0mysql-main/yaml/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    service: frontend
  ports:
    - protocol: TCP
      port: 80 # The port that I need to type in my browser
      targetPort: 3000 # The port which the app works on
  type: LoadBalancer
