react-java0mysql-main/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /react
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
